# WayDiffer

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Readme.md  diff.html  pyproject.toml  requirements.txt
.streamlit/: config.toml  credentials.toml
src/: constants.py  data.py  diff_data.py  main.py
